[Issue-6]; Fixed alignment issue of lines and connector,            Now we have two overlapping div, one containing line which is at back            and other div containing the connector at the front
	   But when creating or using any gate that involves merging or deleting
           of table cell then the padding needs to be set to 0, otherwise it will
	   show misalignment. This should be handled in a separate issue.

--- a/frontend/css/grid.css
+++ b/frontend/css/grid.css
@@ -50,7 +50,9 @@ table{
 		}
 
 		#dropzoneDiv{
-			left: 100;
-			top: 60;
+			//left: 100;
+			//top: 60;
 			//position: fixed;
 		}
+
+		
